notebook/data understanding

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -48,14 +48,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54611206-ffe8-4a49-94d5-7f0b5cc3faca",
+   "id": "d4a1e24e-2821-46ac-8007-af774653d26c",
    "metadata": {},
-   "source": []
+   "source": [
+    "[Kaggle](https://www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset/data)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "c764c299-75df-4e54-9c85-3194f8661e66",
+   "id": "39f5b4d4-5c77-4f81-b6ee-697c337fba21",
    "metadata": {},
+   "source": [
+    "[Science Direct](https://www.sciencedirect.com/science/article/pii/S2352340918315191)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8414c1da-9578-4a28-b9fb-f9ac7057693b",
+   "metadata": {},
+   "source": [
+    "From the Kaggle page:\n",
+    "The file contains the different attributes of customers' reservation details. The detailed data dictionary is given below.\n",
+    "\n",
+    "Data Dictionary\n",
+    "\n",
+    "Booking_ID: unique identifier of each booking\n",
+    "\n",
+    "no_of_adults: Number of adults\n",
+    "\n",
+    "no_of_children: Number of Children\n",
+    "\n",
+    "no_of_weekend_nights: Number of weekend nights (Saturday or Sunday) the guest stayed or booked to stay at the hotel\n",
+    "\n",
+    "no_of_week_nights: Number of week nights (Monday to Friday) the guest stayed or booked to stay at the hotel\n",
+    "\n",
+    "type_of_meal_plan: Type of meal plan booked by the customer:\n",
+    "\n",
+    "required_car_parking_space: Does the customer require a car parking space? (0 - No, 1- Yes)\n",
+    "\n",
+    "room_type_reserved: Type of room reserved by the customer. The values are ciphered (encoded) by INN Hotels.\n",
+    "\n",
+    "lead_time: Number of days between the date of booking and the arrival date\n",
+    "\n",
+    "arrival_year: Year of arrival date\n",
+    "\n",
+    "arrival_month: Month of arrival date\n",
+    "\n",
+    "arrival_date: Date of the month\n",
+    "\n",
+    "market_segment_type: Market segment designation.\n",
+    "\n",
+    "repeated_guest: Is the customer a repeated guest? (0 - No, 1- Yes)\n",
+    "\n",
+    "no_of_previous_cancellations: Number of previous bookings that were canceled by the customer prior to the current booking\n",
+    "\n",
+    "no_of_previous_bookings_not_canceled: Number of previous bookings not canceled by the customer prior to the current booking\n",
+    "\n",
+    "avg_price_per_room: Average price per day of the reservation; prices of the rooms are dynamic. (in euros)\n",
+    "\n",
+    "no_of_special_requests: Total number of special requests made by the customer (e.g. high floor, view from the room, etc)\n",
+    "\n",
+    "booking_status: Flag indicating if the booking was canceled or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54611206-ffe8-4a49-94d5-7f0b5cc3faca",
+   "metadata": {},
+   "source": [
+    "This example data has been captured from single location/country which, due to discretionary reasons, cannot be disclosed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c6af91-3aef-46b2-b3ed-d2995b85b87b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
