--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -92,6 +92,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3bb80f5-0806-4839-bdf7-7f6f9b1cfe95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import zipfile\n",
+    "\n",
+    "# # 1. Define the name of the downloaded zip file\n",
+    "# zip_file_name = 'hotel-reservations-classification-dataset.zip'\n",
+    "\n",
+    "# # 2. Define the name of the CSV file *inside* the zip archive\n",
+    "# # Based on the Kaggle page, the CSV file name is usually 'Hotel Reservations.csv'\n",
+    "# csv_file_name = 'Hotel Reservations.csv'\n",
+    "\n",
+    "# # 3. Unzip the file\n",
+    "# print(f\"Extracting {zip_file_name}...\")\n",
+    "# with zipfile.ZipFile(zip_file_name, 'r') as zip_ref:\n",
+    "#     # Extract the specific CSV file to the current directory\n",
+    "#     zip_ref.extract(csv_file_name) \n",
+    "\n",
+    "# print(\"Extraction complete.\")\n",
+    "\n",
+    "# # 4. Read the CSV into a DataFrame\n",
+    "# # Now you can read the extracted file directly:\n",
+    "# data = pd.read_csv(csv_file_name)\n",
+    "\n",
+    "# print(\"DataFrame loaded successfully!\")\n",
+    "# print(data.head())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ea0c2e6-f04c-4229-9b73-23104e973d2a",
    "metadata": {},
