notebook/scikit learn

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -198,16 +198,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59f65f53-a4ae-4abe-8cde-ccf2c3498afc",
+   "metadata": {},
+   "source": [
+    "For Google Colab:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "b9f46712-99d7-4fb4-8dbd-919856c816ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip uninstall scikit-learn -y\n",
+    "#!pip install scikit-learn==0.24.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "id": "994791aa-3c25-4597-ba2b-0d01489483b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import json \n",
+    "# import json\n",
+    "# import pandas as pd\n",
     "# import os\n",
     "# from pathlib import Path\n",
     "# import zipfile\n",
+    "\n",
     "\n",
     "# # your api key\n",
     "# api_key = {\n",
@@ -299,6 +320,25 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c0e4a9f5-28db-4228-92e8-61308494a774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scikit-learn version: 0.24.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(\"Scikit-learn version:\", sklearn.__version__)\n"
    ]
   },
   {
