--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "id": "3eec65e9-69ba-4544-9e36-dc2eed407c4d",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1416,7 @@
     "plt.title('Booking Status Distribution')\n",
     "plt.xlabel('Status')\n",
     "plt.ylabel('Count')\n",
-    "#plt.savefig('cancellation_distribution.jpg')\n",
+    "plt.savefig('cancellation_distribution.jpg')\n",
     "plt.show();\n",
     "\n",
     "print(data_cleaned['booking_status'].value_counts(normalize=True))"
