notebook/tuned rf model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,17 +29,11 @@
    "id": "ba3df942-38df-4534-a456-f399d3ccf6fe",
    "metadata": {},
    "source": [
-    "Business Understanding\n",
     "\n",
-    "Data Understanding\n",
-    "\n",
-    "Data Preparation\n",
     "\n",
     "Modeling\n",
     "\n",
-    "Evaluation\n",
-    "\n",
-    "Code Quality"
+    "Evaluation\n"
    ]
   },
   {
@@ -48,6 +42,17 @@
    "metadata": {},
    "source": [
     "# ADJUSTMENTS:\n",
+    "conclusions \n",
+    "limitation\n",
+    "next steps\n",
+    "readme\n",
+    "finish presentation (maybe rewatch that first girls presentation)\n",
+    "run things and save them in colab and make the copy and push that\n",
+    "feature importance and tie that into the presentation\n",
+    "download the zip files for coursework\n",
+    "resume and linked in assignments are \n",
+    "\n",
+    "\n",
     "so far, these are the only issues between my env and colab env:\n",
     "mine= sparse=False, colab= sparse_output=False\n",
     "mine= get_feature_names(, colab= get_feature_names_out(\n",
@@ -60,7 +65,7 @@
    "id": "49f61268-f1f7-4504-be7c-543badf45e69",
    "metadata": {},
    "source": [
-    "# Objective: \n",
+    "# Project Objective: \n",
     "The goal of this project is to create a predictive classification model that identifies when a hotel reservation is high-risk before it's  cancelled, allowing your team to proactively intervene. We try several classification models and select a top performing model with high Precision to minimize the cost of offering unnecessary incentives to committed guests."
    ]
   },
@@ -321,9 +326,9 @@
     "sns.set_theme(font_scale=1.5) #set font size larger\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve, RocCurveDisplay\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve, RocCurveDisplay, make_scorer, precision_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "d4041ed2-cf5a-4136-a336-1961d12f9e46",
    "metadata": {},
    "outputs": [
@@ -540,7 +545,7 @@
        "4                       0       Canceled  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "3632ad69-603a-4844-a39e-d6b8740b2afc",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1736,7 @@
        "0.8597680467582973"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1745,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "c8cbf050-407b-4a0f-a3f9-6c1c72f86c8c",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "id": "d2d63699-6636-48a1-970b-46d00eddbe06",
    "metadata": {},
    "outputs": [
@@ -1871,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "id": "51c08f1c-8f2e-4704-bca3-554b28bd9ed7",
    "metadata": {},
    "outputs": [],
@@ -1893,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "89001398-dcd0-49c1-93c9-4c07a47d9b12",
    "metadata": {},
    "outputs": [
@@ -1927,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "be4209bc-de3b-47df-9c0e-b44ed8c8bc9a",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "id": "68bc3434-3137-4019-b5f0-b6ab7b9ca601",
    "metadata": {},
    "outputs": [
@@ -1981,7 +1986,7 @@
        "0.9510402111013471"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "id": "8dec1ddc-1d29-4a0c-b593-178664db594d",
    "metadata": {},
    "outputs": [
@@ -2032,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "id": "3b946e76-1e30-4a4c-996b-882ca8b78211",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "id": "2c45727f-5e68-4f23-b0a5-4261a31afeb1",
    "metadata": {},
    "outputs": [],
@@ -2143,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 53,
    "id": "2af849ef-29bd-4b07-b68d-443e6fc0c7ce",
    "metadata": {},
    "outputs": [
@@ -2177,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 54,
    "id": "0c6c1c34-440d-4405-8cbc-a5db163a79b9",
    "metadata": {},
    "outputs": [
@@ -2221,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "id": "bf8dcdd3-2045-4901-86de-c3f481ad5392",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2236,7 @@
        "0.9093013734953594"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "id": "e2e6e167-96c9-4923-808c-27e38bae3c1e",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 57,
    "id": "38d6bbd4-53df-4d07-b406-64cb09123d3e",
    "metadata": {},
    "outputs": [
@@ -2364,10 +2369,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "99e226d6-8afa-4003-83df-7031a4e8f30a",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d2eccae0-8b4c-425e-b65f-ed3dfc07b887",
    "metadata": {},
    "source": [
-    "## Compare Logistic Regression, Random Forest, & Gradient Boosting Model Results:"
+    "### Compare Logistic Regression, Random Forest, & Gradient Boosting Model Results:"
    ]
   },
   {
@@ -2423,7 +2436,7 @@
    "id": "eba4b557-a705-48e4-943b-472d3740e2d0",
    "metadata": {},
    "source": [
-    "## Feature Importance Findings:\n",
+    "## Feature Importance Analysis:\n",
     "\n",
     "Our analysis of Feature Importance across all three models points to three main categories of predictors that drive cancellation risk: Time Related Risk Factors, Loyalty/Commitment Signals, and Market/Pricing Factors:\n",
     "\n",
@@ -2447,16 +2460,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "82f9b63f-ef53-4656-828f-6e64e78ebdde",
-   "metadata": {},
-   "source": [
-    "## Random Forest Model Tuning:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 58,
    "id": "a05cbd0e-87d0-4eac-abc7-0521fdd114f9",
    "metadata": {},
    "outputs": [
@@ -2530,23 +2535,175 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0e088b-cac7-4db8-b346-5420d457ff6f",
+   "id": "82f9b63f-ef53-4656-828f-6e64e78ebdde",
    "metadata": {},
    "source": [
-    "finish the model objective text\n",
-    "manually print the classification metrics of all 3 models\n",
-    "tune random forest\n",
-    "fix the syntax for the bottom plots\n",
-    "conclusions \n",
-    "limitation\n",
-    "next steps\n",
-    "figure out the readme\n",
-    "finish the presentation (maybe rewatch that first girls presentation)\n",
-    "try to run things and save them in colab and make the copy and push that\n",
-    "look at more feature importance and tie that into the presentation\n",
-    "download the zip files for coursework\n",
-    "make sure to see what the resume and linked in assignments are \n"
+    "## Random Forest Model Tuning:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a744e6-16ab-4760-9640-7fd80ed868cf",
+   "metadata": {},
+   "source": [
+    "Grid Search Cross-Validation:\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "n_estimators: The number of trees in the forest. More trees generally mean better performance, but increases computation time.\n",
+    "[100, 200, 300, 400]\n",
+    "\n",
+    "max_depth: The maximum depth of each tree. Limiting this prevents the model from capturing noise (overfitting).\n",
+    "[10, 20, 30, None]\n",
+    "\n",
+    "min_samples_leaf: The minimum number of samples required to be at a leaf node. Higher values increase smoothness and reduce overfitting.\n",
+    "[1, 2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfb7ba09-7afb-4cd4-8e74-dec7d58dd4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "49db951e-6b35-477b-accd-51d8400a0868",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "#define the parameter grid, with 'classifier' step name + parameter name:\n",
+    "param_grid = {\n",
+    "    'classifier__n_estimators': [50, 100, 200],\n",
+    "    'classifier__max_depth': [5, 10, 20, 30],\n",
+    "    'classifier__min_samples_leaf': [1, 2, 4]}\n",
+    "\n",
+    "#define precision as the scoring metric for positive class (Canceled=1)\n",
+    "precision_scorer = make_scorer(precision_score, pos_label=1)\n",
+    "\n",
+    "#initialize GridSearchCV using pipeline_rf (fitted Random Forest pipeline), cv=5 folds\n",
+    "grid_search_rf = GridSearchCV(\n",
+    "    estimator=pipeline_rf,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring=precision_scorer,\n",
+    "    cv=5,                 \n",
+    "    verbose=2,\n",
+    "    n_jobs=-1)\n",
+    "\n",
+    "#fit the grid_search_rf to the training data\n",
+    "grid_search_rf.fit(X_train, y_train)\n",
+    "\n",
+    "#get best parameters and score:\n",
+    "best_params_rf = grid_search_rf.best_params_\n",
+    "best_score_rf = grid_search_rf.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2a7f783c-cbfa-4961-8887-9efac3188ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__max_depth': 30,\n",
+       " 'classifier__min_samples_leaf': 1,\n",
+       " 'classifier__n_estimators': 200}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f2b828c9-ceb9-416c-bec8-8e18dcf9a1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8698128853573923"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_score_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "96f3137e-31ad-482b-90c6-db15bcef649d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Final Optimized Random Forest Results (Test Set) ---\n",
+      "                  precision    recall  f1-score   support\n",
+      "\n",
+      "Not_Canceled (0)       0.91      0.94      0.92      6079\n",
+      "    Canceled (1)       0.86      0.82      0.84      2971\n",
+      "\n",
+      "        accuracy                           0.90      9050\n",
+      "       macro avg       0.89      0.88      0.88      9050\n",
+      "    weighted avg       0.90      0.90      0.90      9050\n",
+      "\n",
+      "Final AUC Score: 0.9511\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update the parameters in Random Forest pipeline\n",
+    "tuned_rf_pipe= pipeline_rf.set_params(\n",
+    "    classifier__max_depth=30,\n",
+    "    classifier__min_samples_leaf=1,\n",
+    "    classifier__n_estimators=200\n",
+    ")\n",
+    "\n",
+    "#retrain on the training data\n",
+    "tuned_rf_pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# 3. Make predictions on the UNTOUCHED test data\n",
+    "y_pred_rf_tuned = tuned_rf_pipe.predict(X_test)\n",
+    "y_proba_rf_tuned = tuned_rf_pipe.predict_proba(X_test)[:, 1] # Probability for the positive class (1)\n",
+    "\n",
+    "# 4. Print the final classification report and AUC\n",
+    "\n",
+    "print(\"--- Final Optimized Random Forest Results (Test Set) ---\")\n",
+    "print(classification_report(y_test, y_pred_rf_tuned, target_names=['Not_Canceled (0)', 'Canceled (1)']))\n",
+    "print(f\"Final AUC Score: {roc_auc_score(y_test, y_proba_rf_tuned):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0e088b-cac7-4db8-b346-5420d457ff6f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
