notebook/adjusted text in tuned rf

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2655,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "96f3137e-31ad-482b-90c6-db15bcef649d",
    "metadata": {},
    "outputs": [
@@ -2663,7 +2663,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Final Optimized Random Forest Results (Test Set) ---\n",
+      "Optimized Random Forest Results (Test Set)\n",
       "                  precision    recall  f1-score   support\n",
       "\n",
       "Not_Canceled (0)       0.91      0.94      0.92      6079\n",
@@ -2673,7 +2673,7 @@
       "       macro avg       0.89      0.88      0.88      9050\n",
       "    weighted avg       0.90      0.90      0.90      9050\n",
       "\n",
-      "Final AUC Score: 0.9511\n"
+      "Tuned Random Forest AUC Score: 0.9511\n"
      ]
     }
    ],
@@ -2688,15 +2688,13 @@
     "#retrain on the training data\n",
     "tuned_rf_pipe.fit(X_train, y_train)\n",
     "\n",
-    "# 3. Make predictions on the UNTOUCHED test data\n",
+    "#make predictions on untouched test data\n",
     "y_pred_rf_tuned = tuned_rf_pipe.predict(X_test)\n",
     "y_proba_rf_tuned = tuned_rf_pipe.predict_proba(X_test)[:, 1] # Probability for the positive class (1)\n",
     "\n",
-    "# 4. Print the final classification report and AUC\n",
-    "\n",
-    "print(\"--- Final Optimized Random Forest Results (Test Set) ---\")\n",
+    "print(\"Optimized Random Forest Results (Test Set)\")\n",
     "print(classification_report(y_test, y_pred_rf_tuned, target_names=['Not_Canceled (0)', 'Canceled (1)']))\n",
-    "print(f\"Final AUC Score: {roc_auc_score(y_test, y_proba_rf_tuned):.4f}\")"
+    "print(f\"Tuned Random Forest AUC Score: {roc_auc_score(y_test, y_proba_rf_tuned):.4f}\")"
    ]
   },
   {
