notebook/save cancel_rate_avg_room_price

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -229,7 +229,7 @@
    "id": "59f65f53-a4ae-4abe-8cde-ccf2c3498afc",
    "metadata": {},
    "source": [
-    "For Google Colab:"
+    "Run the following code cells to load the data using Kaggle in Google Colab:"
    ]
   },
   {
@@ -289,6 +289,20 @@
     "\n",
     "# data = pd.read_csv(csv_file_name)\n",
     "# print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78aadf07-ba8c-4b30-9c7d-7dd10f4f3ee6",
+   "metadata": {},
+   "source": [
+    "Alternatively, you can import the data by downloading a zipped version of the csv file from the [Kaggle](https://www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset/data) page to your local environment: \n",
+    "1. Clicking the Download Button on the top right of the dataset's Kaggle page\n",
+    "2. Clicking Download Dataset as Zip\n",
+    "3. Navigate to the zipped data in Downloads on local environment\n",
+    "4. Unzip the file\n",
+    "5. Move the file to our repository folder\n",
+    "6. Import the data using pandas 'read_csv'"
    ]
   },
   {
@@ -1410,7 +1424,7 @@
     "plt.title('Booking Status Distribution')\n",
     "plt.xlabel('Status')\n",
     "plt.ylabel('Count')\n",
-    "plt.savefig('images/cancellation_distribution.jpg')\n",
+    "#plt.savefig('images/cancellation_distribution.jpg')\n",
     "plt.show();\n",
     "\n",
     "print(data_cleaned['booking_status'].value_counts(normalize=True))"
@@ -1847,7 +1861,7 @@
     "    data=coefficient_df.head(top_n), \n",
     "    palette='vlag')\n",
     "plt.title(f'Top 10 Feature Importance Coefficients-Logistic Regression')\n",
-    "plt.savefig('images/top_features_logreg.jpg')\n",
+    "#plt.savefig('images/top_features_logreg.jpg')\n",
     "plt.show();\n",
     "\n",
     "print(\"\\nTop 10 Most Important Features (Magnitude and Direction):\")\n",
@@ -2097,7 +2111,7 @@
     "    palette='viridis'\n",
     ")\n",
     "plt.title(f'Top 10 Feature Importance - Random Forest')\n",
-    "plt.savefig('images/top_features_rforest.jpg')\n",
+    "#plt.savefig('images/top_features_rforest.jpg')\n",
     "\n",
     "plt.show();\n",
     "\n",
@@ -2347,7 +2361,7 @@
     "    palette='viridis'\n",
     ")\n",
     "plt.title(f'Top 10 Feature Importance - Gradient Boosting')\n",
-    "plt.savefig('images/top_features_gboost.jpg')\n",
+    "#plt.savefig('images/top_features_gboost.jpg')\n",
     "\n",
     "plt.show();\n",
     "\n",
@@ -2520,7 +2534,7 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('images/cancel_rate_lead_time.jpg')\n",
+    "#plt.savefig('images/cancel_rate_lead_time.jpg')\n",
     "plt.show();\n",
     "\n",
     "print(\"Cancellation Rates(%):\")\n",
@@ -2597,7 +2611,7 @@
     "plt.ylabel('Cancellation Rate (%)', fontsize=14)\n",
     "plt.xticks(rotation=0)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "\n",
+    "plt.savefig('images/\n",
     "plt.tight_layout()\n",
     "plt.show();\n",
     "\n",
@@ -2621,27 +2635,17 @@
    "id": "c4a744e6-16ab-4760-9640-7fd80ed868cf",
    "metadata": {},
    "source": [
-    "Grid Search Cross-Validation:\n",
+    "To tune our Random Forest model, we define a parameter grid and use Grid Search Cross-Validation to find the best parameters. The parameters we chose to tune are as following:\n",
     "\n",
-    "Parameters:\n",
+    "**n_estimators:** The number of trees in the forest. More trees generally mean better performance, but increases computation time.\n",
+    "[50, 100, 200]\n",
     "\n",
-    "n_estimators: The number of trees in the forest. More trees generally mean better performance, but increases computation time.\n",
-    "[100, 200, 300, 400]\n",
+    "**max_depth:** The maximum depth of each tree. Limiting this helps to prevent the model from overfitting.\n",
+    "[5, 10, 20, 30]\n",
     "\n",
-    "max_depth: The maximum depth of each tree. Limiting this prevents the model from capturing noise (overfitting).\n",
-    "[10, 20, 30, None]\n",
-    "\n",
-    "min_samples_leaf: The minimum number of samples required to be at a leaf node. Higher values increase smoothness and reduce overfitting.\n",
+    "**min_samples_leaf:** The minimum number of samples required to be at a leaf node. 1 is the default value and is common for classification models, allows for detailed trees.\n",
     "[1, 2, 4]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfb7ba09-7afb-4cd4-8e74-dec7d58dd4f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2757,8 +2761,7 @@
     "tuned_rf_pipe= pipeline_rf.set_params(\n",
     "    classifier__max_depth=30,\n",
     "    classifier__min_samples_leaf=1,\n",
-    "    classifier__n_estimators=200\n",
-    ")\n",
+    "    classifier__n_estimators=200)\n",
     "\n",
     "#retrain on the training data\n",
     "tuned_rf_pipe.fit(X_train, y_train)\n",
@@ -2901,23 +2904,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b6d2428-7ea5-4fc9-8ccf-095cc16a5838",
-   "metadata": {},
-   "source": [
-    "## Summary of Findings:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "efd3cee0-ed3e-4d69-b834-7357494c95a4",
    "metadata": {},
    "source": [
     "We achieved our initial goal of building an optimized predictive model that classifies reservations as high-risk (or not) prior to arrival or cancellation. That final model was our Optimized Random Forest Classifier. \n",
-    "Final Model Performance (on Test Set):\n",
+    "Our final model acheived the following performance metrics (on the Test Set):\n",
     "- Precision (Canceled=1): 86%\n",
     "- Recall (Canceled=1): 82%\n",
-    "- AUC Score: 0.9511\n",
-    "\n"
+    "- AUC Score: 0.9511"
    ]
   },
   {
@@ -2925,7 +2919,7 @@
    "id": "331ac73c-75d0-486c-a36f-569e96d67ee8",
    "metadata": {},
    "source": [
-    "## Business Insight Summary:"
+    "### Business Insight Summary:"
    ]
   },
   {
@@ -2935,15 +2929,15 @@
    "source": [
     "Main Risk Drivers:\n",
     "\n",
-    "1. Time: Long lead_time is the single most dominant risk factor (confirmed by all models).\n",
+    "1. Time: A long lead time is the single most dominant feautre predicting a hight risk reservation (confirmed by all models).\n",
     "\n",
-    "2. Market: The market_segment_type_Online is a major source of risk most likely due to flexible cancellation policies.\n",
+    "2. Market: The market_segment_type_Online is a major predictor of risk most likely due to flexible cancellation policies.\n",
     "\n",
-    "3. Price: avg_price_per_room has a complex, non-linear relationship with risk, crucial for model accuracy.\n",
+    "3. Price: avg_price_per_room has a complex, non-linear relationship with risk.\n",
     "\n",
-    "The Anti-Cancellation Signals: Highlight the strongest commitment signals that indicate low risk:\n",
+    "The Anti-Cancellation Signals: These features highlight the strongest commitment signals that point to a low-risk reservation:\n",
     "\n",
-    "repeated_guest and no_of_special_requests are strong indicators of committed guests."
+    "Repeat guests, a higher number of special requests, and guests that required a car parking space are all strong indicators of committed guests."
    ]
   },
   {
