--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2960,20 +2960,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6fee1215-45f9-44ad-86b1-3df379832eed",
+   "metadata": {},
+   "source": [
+    "We recommend integrating the final model into the booking system to score all new reservations nightly with a Probability of Cancellation:\n",
+    "\n",
+    "**Use the Model as a Scoring Engine:** The model’s **predict_proba()** function should be used to allow the system to generate a Probability of Cancellation (ranging from 0.0 to 1.0) for every reservation.\n",
+    "\n",
+    "**Probability of Cancellation Tiers**\n",
+    "\n",
+    "1. High-Risk (> 0.70): Proactive Intervention: Retain the guest before the cancellation window. The model's high precision justifies the cost of this incentive.\n",
+    "\n",
+    "2. Medium-Risk (0.50 - 0.70): Monitoring/Soft Touch: Ensure commitment without incurring cost. Save high-value incentives for the most likely cancellations.\n",
+    "\n",
+    "3. Low-Risk (< 0.50): No Action: Normal business operations. Minimal chance of wasted incentive.\n",
+    "\n",
+    "**Batch Integration:** Every 24 hours, all new and modified reservations should be passed through the scoring engine.\n",
+    "\n",
+    "**Threshold Management:** By default, machine learning models use a 0.50 threshold. However, to maintain our 86% Precision, we suggest implementing custom thresholding logic. You're team would be responsible to decide this. For an example, we suggest that bookings are only flagged for \"Proactive Intervention\" if their probability score exceeds 0.70, ensuring you only spend resources on the **most** certain cancellations.\n",
+    "\n",
+    "**Develop Automated Alerting:** Develop an automatic alerting system so that reservations flagged as \"High-Risk\" automatically trigger a notification to the Reservations team for immediate action.\n",
+    "\n",
+    "**Develop a Standard Intervention Plan:** Developing an intervention plan leverages the model's predicted probability of cancellation to apply a logical cost-effective measure based on a reservations probability of cancellation. Low risk reservations should not receive the same incentives as High risk reservations.\n",
+    "\n",
+    "**Model Monitoring & Tracking Results:**\n",
+    "  - The model must be monitored and updated. We recommend retraining the model monthly or quarterly on the newest available data.\n",
+    "  - A/B Testing: Initially, you should A/B test the intervention strategy. For a set period, only intervene on 50% of the high-risk bookings.\n",
+    "  - Measure Lift: Compare the final cancellation rate of the Intervention Group (the 50% high risk booking that you do intervene) versus the Control Group (50% where no intervention was done) to accurately measure the financial \"lift\" or ROI (Return on Investment) of your new strategy. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "deecb610-6bea-4df4-838c-f5039155d703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Risk Tier Distribution (Test Set)\n",
+      "Low Risk: 6239 bookings (68.9%)\n",
+      "Medium Risk: 573 bookings (6.3%)\n",
+      "High Risk: 2238 bookings (24.7%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Show Test Set \"Risk Tier Distribution\"\n",
+    "#create a Series from final model's probabilities on test data\n",
+    "risk_scores = pd.Series(y_proba_rf_tuned)\n",
+    "\n",
+    "#define the bins and labels for our tiers\n",
+    "bins = [0, 0.5, 0.7, 1.0]\n",
+    "labels = ['Low Risk', 'Medium Risk', 'High Risk']\n",
+    "\n",
+    "#separate the reservations by score categories\n",
+    "risk_categories = pd.cut(risk_scores, bins=bins, labels=labels, include_lowest=True)\n",
+    "\n",
+    "#calculate counts and percentages\n",
+    "risk_summary = pd.DataFrame({\n",
+    "    'Count': risk_categories.value_counts(),\n",
+    "    'Percentage': risk_categories.value_counts(normalize=True)\n",
+    "}).reindex(labels) #ensuring the order is low, med, high\n",
+    "\n",
+    "print(\"Risk Tier Distribution (Test Set)\")\n",
+    "for tier, row in risk_summary.iterrows():\n",
+    "    print(f\"{tier}: {int(row['Count'])} bookings ({row['Percentage']:.1%})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ef9172e-794e-4f45-bc17-db4a3a128378",
+   "metadata": {},
+   "source": [
+    "### Example Intervention Plan:\n",
+    "\n",
+    "**Tier 1: High-Risk (> 0.70):** These bookings are the model's top priority. Our 86% Precision guarantees that 86 out of every 100 times you offer this incentive, you are saving a reservation that was genuinely likely to be canceled.\n",
+    "\n",
+    "Personalized High-Value Offer:\n",
+    "  - Goal: Lock in the commitment.\n",
+    "  - Action: Proactively Email/Text a discount on the room rate or a free room upgrade at check-in if the guest pays for the first night ahead of check in\n",
+    "  - Benefit: This creates an incenctive as well as a financial barrier which would reduce the reservation's cancellation probability.\n",
+    "  \n",
+    "**Tier 2: Medium-Risk (0.50 - 0.70):** These bookings are still a concern, but the intervention should be a lower cost than the high-risk reservations, focusing on reinforcing the value of keeping the booking rather than offering a direct discount.\n",
+    "\n",
+    "Value Reinforcement:\n",
+    "  - Goal: Remind the guests of the value of retaining their booking, making them less likely to search for alternatives.\n",
+    "  - Action: Send a rich, interactive email showcasing hotel amenities, local attractions, and special services (spa, restaurant, concierge).\n",
+    "  - Benefit: Increase the perceived value of the stay without incurring a direct financial cost.\n",
+    "\n",
+    "**Tier 3: Low-Risk (< 0.50):** No special action is required. These bookings are likely committed, potentially including high-commitment signals like having a repeat guest or the market segment type was an offline booking.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dc90390-d6fc-4775-8258-3fbed048f9a6",
+   "metadata": {},
+   "source": [
+    "## Limitations and Future Recommendations:\n",
+    "While the current Random Forest model performs with high precision, it is based on a \"snapshot\" of specific historical data. It is important to note that no model can predict everything that would lead to a reservation cancellation, however there are plenty of features not yet included. To further improve the model's accuracy and business use, we suggest retrieving and training the model on even more (and more recent) data. Adding the following features should be considered for future development:\n",
+    "\n",
+    "**External Data Integration:** Currently, the model only sees specific internal data for the reservation. Adding external features could significantly improve the \"Medium Risk\" classification.\n",
+    "- **Local Events & Holidays:** A feature indicating if the reservation occurs during any major local events (festivals, conferences, sports) or public holidays. Guests are often less likely to cancel during high-demand periods.\n",
+    "- **Weather Forecasts:** For bookings made with short lead times, predicted inclement weather often correlates with higher cancellation rates.\n",
+    "- **Economic Indicators:** Changes in fuel prices or consumer confidence indices can influence travel sentiment on a macro level.\n",
+    "\n",
+    "\n",
+    "**Geographic & Competitive Insights**\n",
+    "- **Guest Origin/Location:** Knowing the distance between the guest's home and the hotel. International guests or those flying in typically have a higher \"sunk cost\" and lower cancellation risk compared to local guests.\n",
+    "- **Competitor Pricing:** A \"Price Index\" feature comparing our avg_price_per_room against the local market average for those specific dates. If a competitor drops their price significantly after a guest has booked with us, the risk of \"re-booking\" elsewhere increases.\n",
+    "\n",
+    "\n",
+    "**Data Fidelity & Feature Refinement**\n",
+    "- **Actual Price:** Moving from an \"Average Price\" to the Actual Transaction Price (including taxes/fees) would provide a more precise view of the guest's financial commitment.\n",
+    "- **Reason for Stay**: Capturing whether a booking is for \"Business,\" \"Leisure,\" or \"Personal\" reasons would allow the model to distinguish between different behavioral profiles. Business travelers often have more rigid schedules and company-sponsored cancellations, whereas leisure travelers are generally more price-sensitive and prone to \"shopping around\" or canceling if personal plans change.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e0a47347-26d5-4edc-8eef-aa24aa6f3481",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c34c425-11e3-4a47-a890-1c63d92ce55f",
-   "metadata": {},
-   "source": [
-    "## Intervention Strategy (Putting Precision to Work):"
-   ]
   },
   {
    "cell_type": "code",
