--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2400,7 +2400,7 @@
     "* Accuracy 90%\n",
     "* Precision (Canceled=1) 86%\n",
     "* Recall (Canceled=1) 81%\n",
-    "* AUC Score 0.951\n",
+    "* AUC Score 0.9511\n",
     "  \n",
     "**Gradient Boosting:**\n",
     "* Accuracy 85%\n",
@@ -2430,7 +2430,7 @@
     "\n",
     "3. The Random Forest model also acheived the best Recall (81%). It successfully identifies 81% of all actual cancellations, striking the best balance between catching high-risk guests and minimizing waste.\n",
     "\n",
-    "4. The Random Forest's AUC score also acheived the highest (0.951). This means there is a 95.1% chance that the model will correctly distinguish between a randomly selected Canceled reservation and a randomly selected Not Canceled reservation. This indicates a high-quality ranking system for risk."
+    "4. The Random Forest's AUC score also acheived the highest (0.9511). This means there is a 95.1% chance that the model will correctly distinguish between a randomly selected Canceled reservation and a randomly selected Not Canceled reservation. This indicates a high-quality ranking system for risk."
    ]
   },
   {
@@ -2458,7 +2458,7 @@
     "\n",
     "4. **Other Time-Related Features:** The Random Forest analysis specifically highlighted the importance of **arrival_date** and **arrival_month** which indicates that there are specific periods within the year when cancellation risk spikes, a pattern that the simple, linear Logistic Regression model may not be able to capture effectively.\n",
     "\n",
-    "This analysis, along with comparing the previous model results, confirms that a more sophisticated, non-linear model (Random Forest/Gradient Boosting) is necessary to capture the more complex relationships between time (lead time), pricing, and seasonality. The next section focuses on further tuning the best performing Random Forest model."
+    "This analysis, along with comparing the previous model results, confirms that a more sophisticated, non-linear model (Random Forest/Gradient Boosting) is necessary to capture the more complex relationships between time (lead time), pricing, and seasonality. "
    ]
   },
   {
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "id": "96f3137e-31ad-482b-90c6-db15bcef649d",
    "metadata": {},
    "outputs": [
@@ -2752,8 +2752,7 @@
       "        accuracy                           0.90      9050\n",
       "       macro avg       0.89      0.88      0.88      9050\n",
       "    weighted avg       0.90      0.90      0.90      9050\n",
-      "\n",
-      "Tuned Random Forest AUC Score: 0.9511\n"
+      "\n"
      ]
     }
    ],
@@ -2771,13 +2770,12 @@
     "y_pred_rf_tuned = tuned_rf_pipe.predict(X_test)\n",
     "\n",
     "print(\"Optimized Random Forest Results (Test Set)\")\n",
-    "print(classification_report(y_test, y_pred_rf_tuned, target_names=['Not_Canceled (0)', 'Canceled (1)']))\n",
-    "print(f\"Tuned Random Forest AUC Score: {roc_auc_score(y_test, y_proba_rf_tuned):.4f}\")"
+    "print(classification_report(y_test, y_pred_rf_tuned, target_names=['Not_Canceled (0)', 'Canceled (1)']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 98,
    "id": "4b0321e8-c768-4ce7-bfe7-0ae3d5078a82",
    "metadata": {},
    "outputs": [
@@ -2787,7 +2785,7 @@
        "0.951496450111676"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
